tests/type-errors/import_arl_fun_error_instr.arl
archetype import_arl_fun_error_instr

import "../passed/import_arl_fun_def.arl"

variable res : unit = Unit

entry exec() {
  import_arl_fun_def::f_write_storage_inline()
}
